--- a/src/app/trip/search/search.component.html
+++ b/src/app/trip/search/search.component.html
@@ -1,1 +1,30 @@
-<p>search works!</p>
+<div class="container">
+  <h1>Search Form</h1>
+  <form method="get" action="/trip/search">
+
+    <div class="row mb-3">
+      <label for="cityDeparture" class="col-2 col-form-label" style="text-align: right">City of departure:</label>
+      <div class="col-10">
+        <select name="fromCity" class="form-select" id="cityDeparture" style="width: 300px">
+          <option value="">Select...</option>
+          <option *ngFor="let city of cities">{{city.name}}</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="row mb-3">
+      <label for="cityStay" class="col-2 col-form-label" style="text-align: right">City of stay:</label>
+      <div class="col-10">
+        <select name="toCity" class="form-select" id="cityStay" style="width: 300px">
+          <option value="">Select...</option>
+          <option *ngFor="let city of cities">{{city.name}}</option>
+        </select>
+      </div>
+    </div>
+
+    <div>
+      <button type="submit" class="btn btn-primary" formmethod="get">Search</button>
+    </div>
+
+  </form>
+</div>
