--- a/src/app/trip/search/search.component.html
+++ b/src/app/trip/search/search.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>Search Form</h1>
-  <form method="get" action="/trip/search">
+  <form method="get" action="/trip/search" ngNoForm>
 
     <div class="row mb-3">
       <label for="cityDeparture" class="col-2 col-form-label" style="text-align: right">City of departure:</label>
