Added date picker to trip edit form

--- a/src/app/trip/edit/edit.component.html
+++ b/src/app/trip/edit/edit.component.html
@@ -8,14 +8,14 @@
     <div class="row mb-3">
       <label for="departureDate" class="col-2 col-form-label" style="text-align: right">Departure date:</label>
       <div class="col-10">
-        <input type="text" class="form-control" id="departureDate" style="width: 300px" formControlName="departureDate" readonly>
+        <input type="text" class="form-control" id="departureDate" style="width: 300px" formControlName="departureDate" name="daterange-single" readonly>
       </div>
     </div>
 
     <div class="row mb-3">
       <label for="returnDate" class="col-2 col-form-label" style="text-align: right">Return date:</label>
       <div class="col-10">
-        <input type="text" class="form-control" id="returnDate" style="width: 300px" formControlName="returnDate" readonly>
+        <input type="text" class="form-control" id="returnDate" style="width: 300px" formControlName="returnDate" name="daterange-single" readonly>
       </div>
     </div>
 
