Added trip update

--- a/src/app/trip/edit/edit.component.html
+++ b/src/app/trip/edit/edit.component.html
@@ -109,11 +109,11 @@
       <div class="col-10">
         <select class="form-select" id="boardBasisType" style="width: 300px" formControlName="boardBasisType">
           <option value="">Select...</option>
-          <option value="RO">RO</option>
-          <option value="BB">BB</option>
-          <option value="HB">HB</option>
-          <option value="FB">FB</option>
-          <option value="AI">AI</option>
+          <option value="1">RO</option>
+          <option value="2">BB</option>
+          <option value="3">HB</option>
+          <option value="4">FB</option>
+          <option value="5">AI</option>
         </select>
       </div>
     </div>
