Added decimal number directive

--- a/src/app/trip/edit/edit.component.html
+++ b/src/app/trip/edit/edit.component.html
@@ -72,14 +72,14 @@
     <div class="row mb-3">
       <label for="adultPrice" class="col-2 col-form-label" style="text-align: right;">Adult price:</label>
       <div class="col-10">
-        <input type="text" class="form-control" id="adultPrice" style="width: 300px" formControlName="adultPrice">
+        <input type="text" class="form-control" id="adultPrice" style="width: 300px" formControlName="adultPrice" appTwoDigitDecimalNumber>
       </div>
     </div>
 
     <div class="row mb-3">
       <label for="childPrice" class="col-2 col-form-label" style="text-align: right;">Child price:</label>
       <div class="col-10">
-        <input type="text" class="form-control" id="childPrice" style="width: 300px" formControlName="childPrice">
+        <input type="text" class="form-control" id="childPrice" style="width: 300px" formControlName="childPrice" appTwoDigitDecimalNumber>
       </div>
     </div>
 
