--- a/src/app/trip/edit/edit.component.html
+++ b/src/app/trip/edit/edit.component.html
@@ -126,7 +126,7 @@
     </div>
 
     <div class="mb-3">
-      <button type="submit" class="btn btn-primary">Update</button>
+      <button type="submit" class="btn btn-primary">{{action}}</button>
     </div>
   </form>
 </div>
