--- a/src/app/trip/index/index.component.html
+++ b/src/app/trip/index/index.component.html
@@ -7,6 +7,7 @@
 
     <div class="panel-body">
       <a href="#" routerLink="/trip/search" class="btn btn-success">Search</a>
+      <a href="#" routerLink="/trip/create" class="btn btn-primary">Create new trip</a>
       <table class="table table-striped">
         <thead>
           <tr>
