--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,21 @@ body {
   font-family: Roboto,sans-serif;
   color: #5d646d;
 }
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+.list-items li {
+  margin-bottom: 6px;
+  color: #5d646d;
+}
+
+.list-items-2 li span {
+  display: inline-block;
+  width: 200px;
+  color: #0d233e;
+  font-weight: 500;
+}
