Added purchase view

--- a/src/app/purchase/index/index.component.html
+++ b/src/app/purchase/index/index.component.html
@@ -25,7 +25,7 @@
             <td>{{purchase.price}}</td>
             <td>{{purchase.createdAt}}</td>
             <td class="d-flex">
-              <a href="#" class="btn btn-info">View</a>
+              <a href="#" [routerLink]="['/purchase/view', purchase.id]" class="btn btn-info">View</a>
               <a href="#" class="btn btn-primary">Edit</a>
               <button type="button" class="btn btn-danger">Delete</button>
             </td>
