--- a/src/app/trip/index/index.component.html
+++ b/src/app/trip/index/index.component.html
@@ -45,7 +45,7 @@
             <td class="d-flex">
               <a href="#" [routerLink]="['/trip/view', trip.id]" class="btn btn-info">View</a>
               <a href="#" [routerLink]="['/trip/edit', trip.id]" class="btn btn-primary">Edit</a>
-              <a href="#" [routerLink]="['/purchase', trip.id]" class="btn btn-primary">Purchase</a>
+              <a href="#" [routerLink]="['/purchase/edit', trip.id]" class="btn btn-primary">Purchase</a>
             </td>
           </tr>
         </tbody>
