--- a/src/app/purchase/index/index.component.html
+++ b/src/app/purchase/index/index.component.html
@@ -27,12 +27,34 @@
             <td class="d-flex">
               <a href="#" [routerLink]="['/purchase/view', purchase.id]" class="btn btn-info">View</a>
               <a href="#" [routerLink]="['/purchase/edit', purchase.id, purchase.trip.id]" class="btn btn-primary">Edit</a>
-              <button type="button" class="btn btn-danger">Delete</button>
+              <button type="button" class="btn btn-danger" data-bs-toggle="modal" (click)="openModal(purchase.id)">Delete</button>
             </td>
           </tr>
         </tbody>
       </table>
     </div>
   
+  </div>
+
+  <div class="modal fade" id="deleteModal" data-bs-backdrop="static">
+    <div class="modal-dialog modal-confirm">
+      <div class="modal-content">
+
+        <div class="modal-header flex-column">
+          <button type="button" class="btn-close" aria-hidden="true" (click)="closeModal()"></button>
+          <h4 class="modal-title w-100">Are you sure?</h4>
+        </div>
+
+        <div class="modal-body">
+          <p>Do you really want to delete this record? This process cannot be undone.</p>
+        </div>
+
+        <div class="modal-footer justify-content-center">
+          <button type="button" class="btn btn-secondary" (click)="closeModal()">Cancel</button>
+          <button type="button" class="btn btn-danger" (click)="deletePurchase()">Delete</button>
+        </div>
+
+      </div>
+    </div>
   </div>
 </div>
