--- a/src/app/purchase/view/view.component.html
+++ b/src/app/purchase/view/view.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row pt-4">
     <div class="col-lg-4">
-      <ul class="list-items list-items-2">
+      <ul class="list-items list-items-2" *ngIf="purchase">
         <li><span>Number of adults:</span>{{purchase.numberOfAdults}}</li>
         <li><span>Number of children:</span>{{purchase.numberOfChildren}}</li>
         <li><span>Price:</span>{{purchase.price}}</li>
