Adding preloader style

--- a/src/app/purchase/index/index.component.html
+++ b/src/app/purchase/index/index.component.html
@@ -1,6 +1,14 @@
 <div class="container">
   <div class="panel panel-primary">
 
+    <div class="preloader" id="preloader" *ngIf="!purchasesLoaded">
+      <div class="loader">
+        <svg class="spinner" viewBox="0 0 50 50">
+          <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
+        </svg>
+      </div>
+    </div>
+
     <div class="panel-heading">
       <h2>Purchases</h2>
     </div>
