--- a/src/app/trip/index/index.component.html
+++ b/src/app/trip/index/index.component.html
@@ -1,5 +1,13 @@
 <div class="container">
-  <div class="panel panel-primary">
+  <div class="panel panel-primary" style="position: relative;">
+    
+    <div class="preloader" id="preloader" *ngIf="!tripsLoaded">
+      <div class="loader">
+        <svg class="spinner" viewBox="0 0 50 50">
+          <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
+        </svg>
+      </div>
+    </div>
 
     <div class="panel-heading">
       <h2>Trips</h2>
