Added search criteria selection to search form

--- a/src/app/purchase/index/index.component.html
+++ b/src/app/purchase/index/index.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="panel panel-primary">
+  <div class="panel panel-primary" style="position: relative;">
 
     <div class="preloader" id="preloader" *ngIf="!purchasesLoaded">
       <div class="loader">
